--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <meta name="twitter:title" content="Home">
   <meta name="twitter:description" content="">
   <meta name="twitter:image" content="">
-  <link rel="icon" type="image/png" href="/assets/logo.png"/>
-  <link href="/feed.xml" type="application/rss+xml" rel="alternate" title="Trineuro Last 10 blog posts" />
+  <link rel="icon" type="image/png" href="assets/logo.png"/>
+  <link href="feed.xml" type="application/rss+xml" rel="alternate" title="Trineuro Last 10 blog posts" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="/assets/fonts.css">
-  <link rel="stylesheet" href="/assets/light.css">
-  <link rel="stylesheet" href="/assets/custom.css">
+  <link rel="stylesheet" href="assets/fonts.css">
+  <link rel="stylesheet" href="assets/light.css">
+  <link rel="stylesheet" href="assets/custom.css">
 </head>
 <body>
   <main>
@@ -30,31 +30,31 @@
       <div class="grid-cell">
         <nav class="header-nav">
           <span style="display:inline-flex;"><img src="/assets/logo.png" alt="logo" style="height:30px; padding:4px"></span>
-          <a href="/" class="header-logo" title="Trineuro" style="">Trineuro</a>
+          <a href="" class="header-logo" title="Trineuro" style="">Trineuro</a>
           <ul class="header-links">
             <li><a href="/about/introduction_en.html" style="margin-bottom: 33px;">About</a>
               <ul>
-                <li><a href="/about/introduction_en.html">Introduction</a></li>
-                <li><a href="/about/history_en.html">Corporation History</a></li>
-                <li><a href="/about/vision_en.html">Vision / Mission</a></li>
-                <li><a href="/about/researchfocus_en.html">Research Focus</a></li>
-                <li><a href="/about/organization_en.html">Organization</a></li>
-                <li><a href="/about/ci_en.html">CI</a></li>
+                <li><a href="about/introduction_en.html">Introduction</a></li>
+                <li><a href="about/history_en.html">Corporation History</a></li>
+                <li><a href="about/vision_en.html">Vision / Mission</a></li>
+                <li><a href="about/researchfocus_en.html">Research Focus</a></li>
+                <li><a href="about/organization_en.html">Organization</a></li>
+                <li><a href="about/ci_en.html">CI</a></li>
               </ul>
             </li>
-            <li><a href="/research/fieldsofresearch_en.html" style="margin-bottom:33px;">Research</a>
+            <li><a href="research/fieldsofresearch_en.html" style="margin-bottom:33px;">Research</a>
               <ul>
-                <li><a href="/research/fieldsofresearch_en.html">Fields of Research</a></li>
-                <li><a href="/research/researchachievements_en.html">Research Achievements</a></li>
-                <li><a href="/research/pipelines_en.html">Pipelines</a></li>
-                <li><a href="/research/paper_en.html">Papers</a></li>
-                <li><a href="/research/patent_en.html">Patents</a></li>
-                <li><a href="/research/rdservice_en.html">R&D Service</a></li>
+                <li><a href="research/fieldsofresearch_en.html">Fields of Research</a></li>
+                <li><a href="research/researchachievements_en.html">Research Achievements</a></li>
+                <li><a href="research/pipelines_en.html">Pipelines</a></li>
+                <li><a href="research/paper_en.html">Papers</a></li>
+                <li><a href="research/patent_en.html">Patents</a></li>
+                <li><a href="research/rdservice_en.html">R&D Service</a></li>
               </ul>
             </li>
-            <li><a href="/products_en" style="margin-bottom: 33px;">Products</a></li>
-            <li><a href="/news/companynews_en.html" style="margin-bottom: 33px;">News</a></li>
-            <li><a href="/contact_en" style="margin-bottom: 33px;">Contact</a>
+            <li><a href="products_en" style="margin-bottom: 33px;">Products</a></li>
+            <li><a href="news/companynews_en.html" style="margin-bottom: 33px;">News</a></li>
+            <li><a href="contact_en" style="margin-bottom: 33px;">Contact</a>
             </li>
           </ul>
         </nav>
