fix path index.html

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <div class="grid grid-centered">
       <div class="grid-cell">
         <nav class="header-nav">
-          <span style="display:inline-flex;"><img src="/assets/logo.png" alt="logo" style="height:30px; padding:4px"></span>
+          <span style="display:inline-flex;"><img src="assets/logo.png" alt="logo" style="height:30px; padding:4px"></span>
           <a href="" class="header-logo" title="Trineuro" style="">Trineuro</a>
           <ul class="header-links">
-            <li><a href="/about/introduction_en.html" style="margin-bottom: 33px;">About</a>
+            <li><a href="about/introduction_en.html" style="margin-bottom: 33px;">About</a>
               <ul>
                 <li><a href="about/introduction_en.html">Introduction</a></li>
                 <li><a href="about/history_en.html">Corporation History</a></li>
@@ -61,89 +61,47 @@
 
         <ul class="article-list">
           <div class="container">
-            <img class='photo'  src="/assets/home_1.jpg" alt="home_1" />
+            <img class='photo'  src="assets/home_1.jpg" alt="home_1" />
           </div>
 
           <li class="article-list-item ">
-            <a href="/posts/ourvision" title="Our Vision">
+            <a href="posts/ourvision" title="Our Vision">
               <h5>
                 Our Vision
-                <svg class="icon-arrow-right"><use href="/assets/icon-arrow-right.svg#icon-arrow-right" xlink:href="/assets/icon-arrow-right.svg#icon-arrow-right"></use></svg>
+                <svg class="icon-arrow-right"><use href="assets/icon-arrow-right.svg#icon-arrow-right" xlink:href="assets/icon-arrow-right.svg#icon-arrow-right"></use></svg>
               </h5>
             </a>
             <p>We want to give hope to children with ADHD through relieving their stress and pain, including their families’. We aim to make South Korea the number one medical healthcare-providing country.</p>
-            <div class="article-list-footer">
-              <span class="article-list-minutes">
-                1 minute read
-              </span>
-              <span class="article-list-divider">-</span>
-              <div class="article-list-tags">
-                <a href="/tag/South Korea">South Korea</a>
-                <a href="/tag/Vision">Vision</a>
-                <a href="/tag/ADHD">ADHD</a>
-              </div>
-            </div>
           </li>
 
           <li class="article-list-item ">
-            <a href="/posts/disorders" title="Disorders">
+            <a href="posts/disorders" title="Disorders">
               <h5>
                 Disorders
-                <svg class="icon-arrow-right"><use href="/assets/icon-arrow-right.svg#icon-arrow-right" xlink:href="/assets/icon-arrow-right.svg#icon-arrow-right"></use></svg>
+                <svg class="icon-arrow-right"><use href="assets/icon-arrow-right.svg#icon-arrow-right" xlink:href="assets/icon-arrow-right.svg#icon-arrow-right"></use></svg>
               </h5>
             </a>
             <p>Attention Deficit Hyperactivity Disorder (ADHD) is a neurodevelopmental disorder which has three core symptoms: inattention, hyperactivity and impulsivity. According to adhd-institute.com there are between 5.29% - 7.1% of children and adolescents suffer from ADHD and there is a higher prevalence in males than females.</p>
-            <div class="article-list-footer">
-              <span class="article-list-minutes">
-                1 minute read
-              </span>
-              <span class="article-list-divider">-</span>
-              <div class="article-list-tags">
-                <a href="/tag/neurodevelopment disorder">neurodevelopment disorder</a>
-                <a href="/tag/ADHD">ADHD</a>
-                <a href="/tag/children">children</a>
-              </div>
-            </div>
           </li>
 
           <li class="article-list-item ">
-            <a href="/posts/ourservice" title="Our Service">
+            <a href="posts/ourservice" title="Our Service">
               <h5>
                 Our Service
-                <svg class="icon-arrow-right"><use href="/assets/icon-arrow-right.svg#icon-arrow-right" xlink:href="/assets/icon-arrow-right.svg#icon-arrow-right"></use></svg>
+                <svg class="icon-arrow-right"><use href="assets/icon-arrow-right.svg#icon-arrow-right" xlink:href="assets/icon-arrow-right.svg#icon-arrow-right"></use></svg>
               </h5>
             </a>
             <p>Our company develops varied neurodevelopmental disease models, performs drug efficacy tests through drug screening and conducts two-way consultation on experiments and drugs.</p>
-            <div class="article-list-footer">
-              <span class="article-list-minutes">
-                1 minute read
-              </span>
-              <span class="article-list-divider">-</span>
-              <div class="article-list-tags">
-                <a href="/tag/drug screening">drug screening</a>
-                <a href="/tag/ADHD">ADHD</a>
-              </div>
-            </div>
           </li>
 
           <li class="article-list-item ">
-            <a href="/posts/research" title="Specific research focusing on ADHD">
+            <a href="posts/research" title="Specific research focusing on ADHD">
               <h5>
                 Specific research focusing on ADHD
-                <svg class="icon-arrow-right"><use href="/assets/icon-arrow-right.svg#icon-arrow-right" xlink:href="/assets/icon-arrow-right.svg#icon-arrow-right"></use></svg>
+                <svg class="icon-arrow-right"><use href="assets/icon-arrow-right.svg#icon-arrow-right" xlink:href="assets/icon-arrow-right.svg#icon-arrow-right"></use></svg>
               </h5>
             </a>
             <p>Our company has received various research assignments on neurodevelopmental disorders from national grants, helping us hone our skills in this particular field of research. Recently we got S grade from the Research Foundation in South Korea.We develop effective and personalized drug for patients aiming to reduce unwanted drug side effects through pharmacologically-based research procedures.</p>
-            <div class="article-list-footer">
-              <span class="article-list-minutes">
-                1 minute read
-              </span>
-              <span class="article-list-divider">-</span>
-              <div class="article-list-tags">
-                <a href="/tag/S grade">S grade</a>
-                <a href="/tag/Research Foundation">Research Foundation</a>
-              </div>
-            </div>
           </li>
         </ul>
 
@@ -155,7 +113,7 @@
       </div>
     </div>
   </main>
-  <script src="/assets/vendor.js"></script>
-  <script src="/assets/application.js"></script>
+  <script src="assets/vendor.js"></script>
+  <script src="assets/application.js"></script>
 </body>
 </html>
