--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="grid grid-centered">
       <div class="grid-cell">
         <nav class="header-nav">
-          <span style="display:inline-flex;"><img src="assets/logo.png" alt="logo" style="height:30px; padding:4px"></span>
+          <span style="display:inline-flex;"><img src="assets/logo.png" alt="logo" style="height:30px; padding:6px 4px 0px"></span>
           <a href="" class="header-logo" title="Trineuro" style="">Trineuro</a>
           <ul class="header-links">
             <li><a href="about/introduction_en.html" style="margin-bottom: 33px;">About</a>
