change repo name

--- a/about/organization_en.html
+++ b/about/organization_en.html
@@ -10,7 +10,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://localhost:4000/introduction_en">
   <meta property="og:description" content="">
-  <meta property="og:site_name" content="Trineurotec">
+  <meta property="og:site_name" content="Trineuro">
   <meta property="og:image" content="">
 
   <meta name="twitter:card" content="summary">
