--- a/about/organization_en.html
+++ b/about/organization_en.html
@@ -20,7 +20,6 @@
   <meta name="twitter:image" content="">
 
   <link rel="icon" type="image/png" href="/assets/logo.png"/>
-  <link href="http://localhost:4000/feed.xml" type="application/rss+xml" rel="alternate" title="Trineuro" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="/assets/fonts.css">
   <link rel="stylesheet" href="/assets/light.css">
@@ -56,9 +55,9 @@
                 <li><a href="/research/rdservice_en.html">R&D Service</a></li>
               </ul>
             </li>
-            <li><a href="/products_en" style="margin-bottom: 33px;">Products</a></li>
+            <li><a href="/products/products_en" style="margin-bottom: 33px;">Products</a></li>
             <li><a href="/news/companynews_en.html" style="margin-bottom: 33px;">News</a></li>
-            <li><a href="/contact_en" style="margin-bottom: 33px;">Contact</a>
+            <li><a href="/contact/contact_en" style="margin-bottom: 33px;">Contact</a>
             </li>
           </ul>
         </nav>
