--- a/index.html
+++ b/index.html
@@ -24,36 +24,32 @@
 </head>
 <body>
   <main>
-    <span style="font-style: none; font-size: 13px; float: right; margin: 10px 15px"><a href="/index_ko">한국어</a></span>
     <div class="grid grid-centered">
       <div class="grid-cell">
         <nav class="header-nav">
           <span style="display:inline-flex;"><img src="/assets/logo.png" alt="logo" style="height:30px; padding:4px"></span>
           <a href="/" class="header-logo" title="Trineuro" style="">Trineuro</a>
           <ul class="header-links">
-            <li><a href="/about/introduction_en.html" style="margin-bottom: 33px;">About</a>
+            <li><a href="/about/introduction_en.html" style="margin-bottom: 33px;">회사소개 About</a>
               <ul>
-                <li><a href="/about/introduction_en.html">Introduction</a></li>
-                <li><a href="/about/history_en.html">Corporation History</a></li>
-                <li><a href="/about/vision_en.html">Vision / Mission</a></li>
-                <li><a href="/about/researchfocus_en.html">Research Focus</a></li>
-                <li><a href="/about/organization_en.html">Organization</a></li>
+                <li><a href="/about/introduction_en.html">대표이사인사말</a></li>
+                <li><a href="/about/history_en.html">회사연혁</a></li>
+                <li><a href="/about/vision_en.html">비전/미션</a></li>
+                <li><a href="/about/researchfocus_en.html">중점연구영역</a></li>
                 <li><a href="/about/ci_en.html">CI</a></li>
               </ul>
             </li>
-            <li><a href="/research/fieldsofresearch_en.html" style="margin-bottom:33px;">Research</a>
+            <li><a href="/research/fieldsofresearch_en.html" style="margin-bottom:33px;">연구개발 Research</a>
               <ul>
-                <li><a href="/research/fieldsofresearch_en.html">Fields of Research</a></li>
-                <li><a href="/research/researchachievements_en.html">Research Achievements</a></li>
-                <li><a href="/research/pipelines_en.html">Pipelines</a></li>
-                <li><a href="/research/paper_en.html">Papers</a></li>
-                <li><a href="/research/patent_en.html">Patents</a></li>
-                <li><a href="/research/rdservice_en.html">R&D Service</a></li>
+                <li><a href="/research/fieldsofresearch_en.html">연구분야</a></li>
+                <li><a href="/research/researchachievements_en.html">연구성과</a></li>
+                <li><a href="/research/pipelines_en.html">파이프라인</a></li>
+                <li><a href="/research/paper_en.html">논문&특허</a></li>
               </ul>
             </li>
-            <li><a href="/products/products_en" style="margin-bottom: 33px;">Products</a></li>
-            <li><a href="/news/companynews_en.html" style="margin-bottom: 33px;">News</a></li>
-            <li><a href="/contact/contact_en" style="margin-bottom: 33px;">Contact</a>
+            <li><a href="/products/products_en" style="margin-bottom: 33px;">R&D 서비스</a></li>
+            <li><a href="/news/companynews_en.html" style="margin-bottom: 33px;">회사소식 News</a></li>
+            <li><a href="/contact/contact_en" style="margin-bottom: 33px;">Contact us</a>
             </li>
           </ul>
         </nav>
