--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           <ul class="header-links">
             <li><a href="/about/introduction_en.html" style="margin-bottom: 33px;">회사소개 About</a>
               <ul>
-                <li><a href="/about/introduction_en.html">대표이사인사말</a></li>
-                <li><a href="/about/history_en.html">회사연혁</a></li>
-                <li><a href="/about/vision_en.html">비전/미션</a></li>
-                <li><a href="/about/researchfocus_en.html">중점연구영역</a></li>
+                <li><a href="/about/introduction_en.html">대표이사인사말 Introduction</a></li>
+                <li><a href="/about/history_en.html">회사연혁 Corporation History</a></li>
+                <li><a href="/about/vision_en.html">비전/미션 Vision/Mission</a></li>
+                <li><a href="/about/researchfocus_en.html">중점연구영역 Research Focus</a></li>
                 <li><a href="/about/ci_en.html">CI</a></li>
               </ul>
             </li>
