--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             </li>
             <li><a href="/research/fieldsofresearch_en.html" style="margin-bottom:33px;">연구개발  Research</a>
               <ul>
-                <li><a href="/research/fieldsofresearch_en.html">연구분야</a></li>
-                <li><a href="/research/researchachievements_en.html">연구성과</a></li>
-                <li><a href="/research/pipelines_en.html">파이프라인</a></li>
-                <li><a href="/research/paper_en.html">논문&특허</a></li>
+                <li><a href="/research/fieldsofresearch_en.html">    연구분야     Fields of Research</a></li>
+                <li><a href="/research/researchachievements_en.html">연구성과  Research Achievements</a></li>
+                <li><a href="/research/pipelines_en.html">           파이프라인            Pipelines</a></li>
+                <li><a href="/research/paper_en.html">               논문&특허        Paper & Patent</a></li>
               </ul>
             </li>
             <li><a href="/products/products_en" style="margin-bottom: 33px;">R&D 서비스</a></li>
