--- a/index.html
+++ b/index.html
@@ -30,26 +30,42 @@
           <span style="display:inline-flex;"><img src="/assets/logo.png" alt="logo" style="height:30px; padding:4px"></span>
           <a href="/" class="header-logo" title="Trineuro" style="">Trineuro</a>
           <ul class="header-links">
-            <li><a href="/about/introduction_en.html" style="margin-bottom: 33px;">회사소개  About</a>
+            <li><a href="/about/introduction.html" style="margin-bottom: 33px;">회사소개  About</a>
               <ul>
-                <li><a href="/about/introduction_en.html">대표이사인사말   Introduction</a></li>
-                <li><a href="/about/history_en.html">회사연혁  Corporation History</a></li>
-                <li><a href="/about/vision_en.html">비전/미션       Vision/Mission</a></li>
-                <li><a href="/about/researchfocus_en.html">중점연구영역 Research Focus</a></li>
-                <li><a href="/about/ci_en.html">CI</a></li>
+                  <li><a href="/about/introduction.html">대표이사인사말<span>Introduction</span></a></li>
+                  <li><a href="/about/history.html">회사연혁<span>Corporation History</span></a></li>
+                  <li><a href="/about/vision.html">비전/미션<span>Vision/Mission</span></a></li>
+                  <li><a href="/about/researchfocus.html">중점연구영역<span>Research Focus</span></a></li>
+                <li><a href="/about/ci.html">CI</a></li>
               </ul>
             </li>
-            <li><a href="/research/fieldsofresearch_en.html" style="margin-bottom:33px;">연구개발  Research</a>
+            <li><a href="/research/fieldsofresearch.html" style="margin-bottom:33px;">연구개발  Research</a>
               <ul>
-                  <li><a href="/research/fieldsofresearch_en.html">연구분야<span>Fields of Research</span></a></li>
-                  <li><a href="/research/researchachievements_en.html">연구성과<span>Research Achievements</span></a></li>
-                  <li><a href="/research/pipelines_en.html">파이프라인<span>Pipelines</span></a></li>
-                  <li><a href="/research/paper_en.html">논문&특허<span>Paper & Patent</span></a></li>
+                  <li><a href="/research/fieldsofresearch.html">연구분야<span>Fields of Research</span></a></li>
+                  <li><a href="/research/researchachievements.html">연구성과<span>Research Achievements</span></a></li>
+                  <li><a href="/research/pipelines.html">파이프라인<span>Pipelines</span></a></li>
+                  <li><a href="/research/paper.html">논문&특허<span>Paper & Patent</span></a></li>
               </ul>
             </li>
-            <li><a href="/products/products_en" style="margin-bottom: 33px;">R&D 서비스</a></li>
-            <li><a href="/news/companynews_en.html" style="margin-bottom: 33px;">회사소식  News</a></li>
-            <li><a href="/contact/contact_en" style="margin-bottom: 33px;">Contact us</a>
+            <li><a href="/rd/1.html" style="margin-bottom: 33px;">R&D 서비스</a>
+              <ul>
+                  <li><a href="/rd/1.html">서비스 신청절차</a></li>
+                  <li><a href="/rd/2.html">보유 뇌질환모델</a></li>
+                  <li><a href="/rd/3.html">in vitro 효능평가 및 기전연구</a></li>
+                  <li><a href="/rd/4.html">in vivo 효능평가 및 기전연구</a></li> 
+              </ul>
+            </li>
+            <li><a href="/news/companynews.html" style="margin-bottom: 33px;">회사소식  News</a>
+              <ul>
+                  <li><a href="/news/companynews.html">회사소식"</a></li>
+                  <li><a href="/news/publicrelations.html">홍보<span>Public Relations</span></a></li>
+              </ul>
+            </li>
+            <li><a href="/contact/contact" style="margin-bottom: 33px;">Contact us</a>
+              <ul>
+                  <li><a href="/contact/map.html">찾아오시는 길<span>Map & Direction</span></a></li>
+                  <li><a href="/contact/contact.html">Contact</a></li>
+              </ul>
             </li>
           </ul>
         </nav>
