--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </li>
             <li><a href="/news/companynews.html" style="margin-bottom: 33px;">회사소식  News</a>
               <ul>
-                  <li><a href="/news/companynews.html">회사소식"</a></li>
+                  <li><a href="/news/companynews.html">회사소식</a></li>
                   <li><a href="/news/publicrelations.html">홍보<span>Public Relations</span></a></li>
               </ul>
             </li>
