--- a/about/introduction.html
+++ b/about/introduction.html
@@ -64,9 +64,14 @@
         
         <article class="article ">
           <h1>대표이사 인사말 Introduction</h1>
-          <p>주의력결핍과잉행동장애 (attention deficit hyperactivity disorder, ADHD)은 집중력저해, 과잉행동, 충동성을 특징으로 하는 발달장애의 하나로 전 세계 유병률이 8%에 이를 정도로 흔한 신경학적 증상입니다. 흔히 학습저해, 왕따 문제, 사고나 폭력성 등의 사회문제와 연결될 수 있어 많은 관심의 대상이 되고 있습니다. 특히 최근에는 성인의 4% 정도가 집중력 저해로 인해 직장이나 학교에서 업무와 학업에 문제를 보이고 있는 것으로 알려지고 있는 등 성인의 ADHD도 많은 문제가 되고 있습니다. ADHD 치료제 시장의 크기는 16조 이상으로 추산되며 연평균 성장률이 12%에 이르고 있으며 이는 면역항암제 분야와 유사할 정도의 가파른 성장세입니다. 
-          현재 주로 사용되고 있는 각성제 타입의 치료제는 많은 환자들에게 치료 효율을 보이고 있지만 25% 정도의 환자에게서는 치료 반응이 미미하거나 없으며 무엇보다도 식욕 및 성장저해, 수면장애, 의존성 유발, 심혈관계 부작용 등 다양한 부작용을 지니고 있어 새로운 치료제 개발이 절실합니다. 국내에 사용되고 있는 의약품의 부작용 보고 내용 100만건 이상을 트리뉴로가 분석한 데이터에 의하면 ADHD 치료제의 부작용에 대한 호소가 전체 약물 중 3위 및 7위에 해당할 정도로 그 심각성이 매우 커서 부작용 없는 치료제의 개발이 절실히 요구되고 있습니다.<p>
+          <br/>
+          <br/>
+          <p>주의력결핍과잉행동장애 (attention deficit hyperactivity disorder, ADHD)은 집중력저해, 과잉행동, 충동성을 특징으로 하는 발달장애의 하나로 전 세계 유병률이 8%에 이를 정도로 흔한 신경학적 증상입니다. 흔히 학습저해, 왕따 문제, 사고나 폭력성 등의 사회문제와 연결될 수 있어 많은 관심의 대상이 되고 있습니다. 특히 최근에는 성인의 4% 정도가 집중력 저해로 인해 직장이나 학교에서 업무와 학업에 문제를 보이고 있는 것으로 알려지고 있는 등 성인의 ADHD도 많은 문제가 되고 있습니다. ADHD 치료제 시장의 크기는 16조 이상으로 추산되며 연평균 성장률이 12%에 이르고 있으며 이는 면역항암제 분야와 유사할 정도의 가파른 성장세입니다.</p> 
+          <br/>
+          <p>현재 주로 사용되고 있는 각성제 타입의 치료제는 많은 환자들에게 치료 효율을 보이고 있지만 25% 정도의 환자에게서는 치료 반응이 미미하거나 없으며 무엇보다도 식욕 및 성장저해, 수면장애, 의존성 유발, 심혈관계 부작용 등 다양한 부작용을 지니고 있어 새로운 치료제 개발이 절실합니다. 국내에 사용되고 있는 의약품의 부작용 보고 내용 100만건 이상을 트리뉴로가 분석한 데이터에 의하면 ADHD 치료제의 부작용에 대한 호소가 전체 약물 중 3위 및 7위에 해당할 정도로 그 심각성이 매우 커서 부작용 없는 치료제의 개발이 절실히 요구되고 있습니다.<p>
+          <br/>
           <p>주식회사 트리뉴로는 이러한 기존 치료제의 치료효능 한계와 부작용을 해결하고자 ADHD의 치료 타겟으로 알려진 세로토닌, 도파민, 노르에피네프린 신경전달 물질 수송체 3가지 모두를 동시에 조절할 수 있는 혁신적인 의약품 후보 물질을 개발하였습니다. 3가지 타겟을 동시에 조절하는 독창적, 창의적, 혁신적 접근법은 ADHD 분야에서 first-in-class 치료제를 제공함으로서 고통받는 환자의 가족의 행복한 삶과 우리나라 바이오산업의 세계화에 기여할 것으로 믿어 의심치 않습니다. </p>
+          <br/>
           <p>발달장애와 난치성 뇌질환은 전자약, 디지털 치료제 등의 차세대 치료법의 개발이 활발한 분야입니다. 트리뉴로에서 개발하고 있는 치료제 후보 물질은 이러한 4차 산업 혁명 시대의 새로운 치료법의 효율 증대를 위한 플랫폼으로서 다양한 활용법 증진의 토대가 될 것 입니다. ADHD등 발달 장애 분야에 특화된 바이오벤처로 성장하고 있는 우리 트리뉴로에 많은 관심과 격려 부탁드립니다.</p>
           <br/>
           <br/>
