--- a/about/introduction.html
+++ b/about/introduction.html
@@ -74,6 +74,8 @@
           <br/>
           <p>발달장애와 난치성 뇌질환은 전자약, 디지털 치료제 등의 차세대 치료법의 개발이 활발한 분야입니다. 트리뉴로에서 개발하고 있는 치료제 후보 물질은 이러한 4차 산업 혁명 시대의 새로운 치료법의 효율 증대를 위한 플랫폼으로서 다양한 활용법 증진의 토대가 될 것 입니다. ADHD등 발달 장애 분야에 특화된 바이오벤처로 성장하고 있는 우리 트리뉴로에 많은 관심과 격려 부탁드립니다.</p>
           <br/>
+          <p>대표이사 신 찬영</p>
+          <br/>
           <br/>
           <h1>대표이사 연혁</h1>
           <p>뇌신경질환 관련연구 및 신약개발 전문가</p>
