--- a/about/introduction.html
+++ b/about/introduction.html
@@ -77,6 +77,8 @@
           <br/>
           <br/>
           <h1>대표이사 연혁</h1>
+          <br/>
+          <img style="margin-right: auto; margin-left: auto; width: 700px; height: auto;" align="middle"  src="/assets/대표이사.png" alt="대표이사" />
           <p>뇌신경질환 관련연구 및 신약개발 전문가</p>
           <br/>
           <br/>
