--- a/about/introduction.html
+++ b/about/introduction.html
@@ -86,7 +86,9 @@
             <h3>뇌신경질환관련연구</h3>
             <li>자폐증, ADHD 질환 연구</li>
             <li>뇌졸중, 뇌염증, 알츠하이머병등 뇌질환기전 및 치료제개발 연구</li>
-            <li>뇌질환 치료제 개발연구</li>
+            <br/>
+            <br/>
+            <h3>뇌질환 치료제 개발연구</h3>
             <li>8개의 치료제 특허 등록 및 5건의 기술 이전</li>
             <li>뇌질환 관련 7회 연구비 수혜</li>
             <li>5년 내 논문 SCI(E):100편 이상</li>
