--- a/about/introduction.html
+++ b/about/introduction.html
@@ -63,7 +63,7 @@
         </nav>
         
         <article class="article ">
-          <h1>대표이사 인사말 Introduction</h1>
+          <h1>!!!!!!대표이사 인사말 Introduction</h1>
           <br/>
           <p>주의력결핍과잉행동장애 (attention deficit hyperactivity disorder, ADHD)은 집중력저해, 과잉행동, 충동성을 특징으로 하는 발달장애의 하나로 전 세계 유병률이 8%에 이를 정도로 흔한 신경학적 증상입니다. 흔히 학습저해, 왕따 문제, 사고나 폭력성 등의 사회문제와 연결될 수 있어 많은 관심의 대상이 되고 있습니다. 특히 최근에는 성인의 4% 정도가 집중력 저해로 인해 직장이나 학교에서 업무와 학업에 문제를 보이고 있는 것으로 알려지고 있는 등 성인의 ADHD도 많은 문제가 되고 있습니다. ADHD 치료제 시장의 크기는 16조 이상으로 추산되며 연평균 성장률이 12%에 이르고 있으며 이는 면역항암제 분야와 유사할 정도의 가파른 성장세입니다.</p> 
           <br/>
