--- a/about/introduction.html
+++ b/about/introduction.html
@@ -78,30 +78,34 @@
           <br/>
           <h1>대표이사 연혁</h1>
           <br/>
-          <img style="margin-right: auto; margin-left: auto; width: 700px; height: auto;" align="middle"  src="/assets/ceo_photo.png" alt="대표이사" />
-          <p>뇌신경질환 관련연구 및 신약개발 전문가</p>
-          <br/>
-          <br/>
-          <div class="article-content">
-            <h3>뇌신경질환관련연구</h3>
-            <li>자폐증, ADHD 질환 연구</li>
-            <li>뇌졸중, 뇌염증, 알츠하이머병등 뇌질환기전 및 치료제개발 연구</li>
-            <br/>
-            <br/>
-            <h3>뇌질환 치료제 개발연구</h3>
-            <li>8개의 치료제 특허 등록 및 5건의 기술 이전</li>
-            <li>뇌질환 관련 7회 연구비 수혜</li>
-            <li>5년 내 논문 SCI(E):100편 이상</li>
-            <li>국외 우수 뇌질환 연구진과의 교류 (UCLA, UT SouthWestern 등)</li>
-            <br/>
-            <br/>
-            <h3>현 학회 등 전문가 활동</h3>
-            <li>뇌신경과학회, 약리학회, 약학회 임원 뇌신경발생분과 회원</li>
-            <li>한국응용약물학회 사업위원장</li>
-            <li>3차 뇌연구촉진 기본계획 산업화 분과위원장</li>
-            <li>한국연구재단 뇌 및 의공학단 RP (뇌질환 분야)</li>
-            <li>중앙약사심의위원회 (식약처) 전문가</li>
-            <li>화장품위해평가 자문위원</li>
+          <div style="display: flex">
+              <div>
+                  <img style="width: 300px; height: auto;" src="/assets/ceo_photo.png" alt="대표이사" />
+                  <h4>>뇌신경질환 관련연구 및 신약개발 전문가</h4>
+              </div>
+              <div>
+                  <div class="article-content">
+                    <h3>뇌신경질환관련연구</h3>
+                    <li>자폐증, ADHD 질환 연구</li>
+                    <li>뇌졸중, 뇌염증, 알츠하이머병등 뇌질환기전 및 치료제개발 연구</li>
+                    <br/>
+                    <br/>
+                    <h3>뇌질환 치료제 개발연구</h3>
+                    <li>8개의 치료제 특허 등록 및 5건의 기술 이전</li>
+                    <li>뇌질환 관련 7회 연구비 수혜</li>
+                    <li>5년 내 논문 SCI(E):100편 이상</li>
+                    <li>국외 우수 뇌질환 연구진과의 교류 (UCLA, UT SouthWestern 등)</li>
+                    <br/>
+                    <br/>
+                    <h3>현 학회 등 전문가 활동</h3>
+                    <li>뇌신경과학회, 약리학회, 약학회 임원 뇌신경발생분과 회원</li>
+                    <li>한국응용약물학회 사업위원장</li>
+                    <li>3차 뇌연구촉진 기본계획 산업화 분과위원장</li>
+                    <li>한국연구재단 뇌 및 의공학단 RP (뇌질환 분야)</li>
+                    <li>중앙약사심의위원회 (식약처) 전문가</li>
+                    <li>화장품위해평가 자문위원</li>
+                  </div>
+              </div>
           </div>
           <br/>
           <br/>
