--- a/about/introduction.html
+++ b/about/introduction.html
@@ -79,9 +79,10 @@
           <h1>대표이사 연혁</h1>
           <br/>
           <div style="display: flex">
-              <div>
+              <div style="flex: 1">
                   <img style="width: 300px; height: auto;" src="/assets/ceo_photo.png" alt="대표이사" />
-                  <h4>>뇌신경질환 관련연구 및 신약개발 전문가</h4>
+                  <br/>
+                  <h4>뇌신경질환 관련연구 및 신약개발 전문가</h4>
               </div>
               <div>
                   <div class="article-content">
