--- a/about/researchfocus.html
+++ b/about/researchfocus.html
@@ -67,30 +67,18 @@
           <br/>
           <div class="article-content">
             <h3>ADHD 개요</h3>
-            <p>ADHD는 가장 흔한 정신 장애 중 하나이며, 뇌 내 신호전달 체계 이상으로 나타나는 뇌발달 장애임. 아동 및 청소년의 약 2.2-7.2%, 전 세계적으로 성인의 2.8-5.0%로서 과도하고 지속적인 부주의, 과잉행동 및 충동적 행동 (Inattention, hyperactivity, impulsivity) 으로 특징지어짐</p>
-            <br/>
-            <p>미국의 정신질환 진단 및 통계 편람 (DSM-5)에 따르면 ADHD는 주의력 결핍 또는 과잉행동-충동성 행동 장애 증상을 특징으로 하며, 주로 12세 이전에 발병하고 청소년기 및 성인기에도 그 증상이 지속될 수 있는 신경발달 장애임</p>
-            <br/>
-            <p>증상의 특징에 따라 주의력 결핍형, 과잉행동 및 충동성 장애형, 세 증상 모두 나타나는 복합형으로 분류할 수 있음</p>
-            <br/>
-            <p>ADHD는 5-10%의 높은 유병률을 보이고 있으나, 그 원인인자 및 병리 기전이 명확하게 규명되지 않은 뇌신경 분야의 난치성 질환중 하나로 여겨지고 있음</p>
-            <br/>
-            <p>이 질환은 조기 아동기에 진단되는 경우가 많지만, 최근 연구에서 뒤늦게 발병되는 성인 ADHD 발병에 대한 보고가 많음</p>
-            <br/>
-            <p>전 세계적으로 아동 및 청소년의 경우 약 2.2-7.2 %, 성인의 경우 2.8-5.0%의 유병률을 나타내며 주 증상으로 과도하고 지속적인 부주의, 과잉행동 및 충동적 행동을 나타냄 (American Psychiatric Association, 2000)</p>
-            <br/>
-            <p>유병률이 높고, 이후 정신병 동반 질환과의 강한 상관 관계, 성인기까지의 지속성 및 평생 동안의 기능 장애로 인해 ADHD는 전 세계적으로 중요한 장애로 인식되고 있음</p>
-            <br/>
-            <p>ADHD의 증상이나 병인과 밀접한 연관성을 지닌 직관, 충동성, 대인관계, 정서변화, 집중력, 억제력 등은 도파민, 노르에피네프린, 세로토닌 신경계와 서로 복잡한 관련성을 보이고, ADHD 환자의 경우 개인에 따라 위의 각 증상이 발현되는 정도가 다름</p>
-            <br/>
-            <p>ADHD는 소아 5 - 10%의 높은 유병률과 성인기까지 지속되는 질환 (40% 이상)으로서 미국의 경우 13-18세에서 9%, 성인에서 4.1%의 유병률을 보이며 (미국정신의학회 보고), 2014년 우리나라 치료 등록 ADHD 환자 수는 약 6만 여명으로서 최근 5년 연평균 3%의 증가율을 보이고 있음</p>
-            <br/>
-            <p>GBI Research의 ‘ADHD Therapeutics Market to 2018(2013.3)', Datamonitor의 'Attention Deficit Hyperactivity Disorder Pipeline(2011.6)' 및 'Attention Deficit Hyperactivity Disorder Epidemiology(2011.8)' 등의 자료를 기반으로 2014년에 생명공학정책연구센터에 발표한 내용에 따르면, ADHD 발병률은 지역적·환경적 편차가 큰 편이나, 평균적으로 전 세계 아동의 5.3%, 성인의 4.4%에서 발생하고 있고, ADHD 발병률은 6~12살 아동 사이에서 가장 높고 남자가 여자에 비해 2배 정도 높으며, 어릴 적 ADHD로 진단받은 아이들 중 50% 정도가 성인이 되어서도 증상이 지속되고 있는 것으로 알려짐</p>  
-            <br/>
-            <p>ADHD의 발병기전은 아직 명확히 밝혀진 바가 없으며, 유전학적 조사를 통해 위험인자를 확인한 결과, 신경전달 물질인 monoamine의 조절과 관련이 있을 것으로 추측됨. 발병기전의 불명확성으로 ADHD 동물 모델 역시 확실치 않으며 이는 약물 개발 단계에서 어려움을 유발함</p>
-            <br/>
-            <p>연간 7조원에 달하는 ADHD 치료제 시장에도 불구하고 현 치료제는 25%에 달하는 치료 불응 환자군의 존재와 다양한 부작용으로 인해 효능과 안전성을 확보한 획기적인 신약 개발이 절실함</p>
-          </div>
+            <li>ADHD는 가장 흔한 정신 장애 중 하나이며, 뇌 내 신호전달 체계 이상으로 나타나는 뇌발달 장애임. 아동 및 청소년의 약 2.2-7.2%, 전 세계적으로 성인의 2.8-5.0%로서 과도하고 지속적인 부주의, 과잉행동 및 충동적 행동 (Inattention, hyperactivity, impulsivity) 으로 특징지어짐</li>
+            <li>미국의 정신질환 진단 및 통계 편람 (DSM-5)에 따르면 ADHD는 주의력 결핍 또는 과잉행동-충동성 행동 장애 증상을 특징으로 하며, 주로 12세 이전에 발병하고 청소년기 및 성인기에도 그 증상이 지속될 수 있는 신경발달 장애임</li>
+            <li>증상의 특징에 따라 주의력 결핍형, 과잉행동 및 충동성 장애형, 세 증상 모두 나타나는 복합형으로 분류할 수 있음</li>
+            <li>ADHD는 5-10%의 높은 유병률을 보이고 있으나, 그 원인인자 및 병리 기전이 명확하게 규명되지 않은 뇌신경 분야의 난치성 질환중 하나로 여겨지고 있음</li>
+            <li>이 질환은 조기 아동기에 진단되는 경우가 많지만, 최근 연구에서 뒤늦게 발병되는 성인 ADHD 발병에 대한 보고가 많음</li>
+            <li>전 세계적으로 아동 및 청소년의 경우 약 2.2-7.2 %, 성인의 경우 2.8-5.0%의 유병률을 나타내며 주 증상으로 과도하고 지속적인 부주의, 과잉행동 및 충동적 행동을 나타냄 (American Psychiatric Association, 2000)</li>
+            <li>유병률이 높고, 이후 정신병 동반 질환과의 강한 상관 관계, 성인기까지의 지속성 및 평생 동안의 기능 장애로 인해 ADHD는 전 세계적으로 중요한 장애로 인식되고 있음</li>
+            <li>ADHD의 증상이나 병인과 밀접한 연관성을 지닌 직관, 충동성, 대인관계, 정서변화, 집중력, 억제력 등은 도파민, 노르에피네프린, 세로토닌 신경계와 서로 복잡한 관련성을 보이고, ADHD 환자의 경우 개인에 따라 위의 각 증상이 발현되는 정도가 다름</li>
+            <li>ADHD는 소아 5 - 10%의 높은 유병률과 성인기까지 지속되는 질환 (40% 이상)으로서 미국의 경우 13-18세에서 9%, 성인에서 4.1%의 유병률을 보이며 (미국정신의학회 보고), 2014년 우리나라 치료 등록 ADHD 환자 수는 약 6만 여명으로서 최근 5년 연평균 3%의 증가율을 보이고 있음</li>
+            <li>GBI Research의 ‘ADHD Therapeutics Market to 2018(2013.3)', Datamonitor의 'Attention Deficit Hyperactivity Disorder Pipeline(2011.6)' 및 'Attention Deficit Hyperactivity Disorder Epidemiology(2011.8)' 등의 자료를 기반으로 2014년에 생명공학정책연구센터에 발표한 내용에 따르면, ADHD 발병률은 지역적·환경적 편차가 큰 편이나, 평균적으로 전 세계 아동의 5.3%, 성인의 4.4%에서 발생하고 있고, ADHD 발병률은 6~12살 아동 사이에서 가장 높고 남자가 여자에 비해 2배 정도 높으며, 어릴 적 ADHD로 진단받은 아이들 중 50% 정도가 성인이 되어서도 증상이 지속되고 있는 것으로 알려짐</li>  
+            <li>ADHD의 발병기전은 아직 명확히 밝혀진 바가 없으며, 유전학적 조사를 통해 위험인자를 확인한 결과, 신경전달 물질인 monoamine의 조절과 관련이 있을 것으로 추측됨. 발병기전의 불명확성으로 ADHD 동물 모델 역시 확실치 않으며 이는 약물 개발 단계에서 어려움을 유발함</li>
+            <li>연간 7조원에 달하는 ADHD 치료제 시장에도 불구하고 현 치료제는 25%에 달하는 치료 불응 환자군의 존재와 다양한 부작용으로 인해 효능과 안전성을 확보한 획기적인 신약 개발이 절실함</li>
         </article>
         <footer class="footer ">
           <p>
