--- a/about/ci.html
+++ b/about/ci.html
@@ -67,11 +67,12 @@
           <br/>
           <br/>
           <div class="article-content">
+            <img style="margin-top: 80px;  margin-right: auto; margin-left: auto; width: 550px; height: auto;" align="middle"  src="/assets/tri.png" alt="tri" />
             <h3>TRI</h3>
-            <li>3개의 타겟: DAT, NET, SERT</li>
-            <li>3개의 핵심증상: 과잉행동, 충동, 부주의</li>
-            <li>3가지 부작용: 의존성, 성장저해, 수면장애</li>
-            <img style="margin-top: 80px;  margin-right: auto; margin-left: auto; width: 550px; height: auto;" align="middle"  src="/assets/CI_small.png" alt="ci" />
+            <p>1) 3개의 타겟: DAT, NET, SERT</p>
+            <p>2) 3개의 핵심증상: 과잉행동, 충동, 부주의</p>
+            <p>3) 3가지 부작용: 의존성, 성장저해, 수면장애</p>
+            <img style="margin-top: 80px;  margin-right: auto; margin-left: auto; width: 550px; height: auto;" align="middle"  src="/assets/ci.png" alt="ci" />
           </div>
         </article>
         <footer class="footer ">
