--- a/about/ci.html
+++ b/about/ci.html
@@ -69,9 +69,9 @@
           <div class="article-content">
             <img  src="/assets/ci.png" alt="ci" />
             <h3>TRI</h3>
-            <p>1) 3개의 타겟: DAT, NET, SERT</p>
-            <p>2) 3개의 핵심증상: 과잉행동, 충동, 부주의</p>
-            <p>3) 3가지 부작용: 의존성, 성장저해, 수면장애</p>
+            <p style="margin-top: 0px">1) 3개의 타겟: DAT, NET, SERT</p>
+            <p style="margin-top: 0px">2) 3개의 핵심증상: 과잉행동, 충동, 부주의</p>
+            <p style="margin-top: 0px">3) 3가지 부작용: 의존성, 성장저해, 수면장애</p>
             <img style="margin-top: 80px;  margin-right: auto; margin-left: auto; width: 550px; height: auto;" align="middle"  src="/assets/tri.png" alt="tri" />
           </div>
         </article>
