--- a/research/rdservice.html
+++ b/research/rdservice.html
@@ -2,67 +2,74 @@
 <html lang="en">
 <head>
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Trineuro | Introduction</title>
+  <title>Trineuro | Home</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="Introduction">
+  <meta property="og:title" content="Home">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="http://localhost:4000/introduction_en">
+  <meta property="og:url" content="/">
   <meta property="og:description" content="">
-  <meta property="og:site_name" content="Trineurotec">
+  <meta property="og:site_name" content="Trineuro">
   <meta property="og:image" content="">
-
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:url" content="http://localhost:4000/introduction_en">
-  <meta name="twitter:title" content="Introduction">
+  <meta name="twitter:url" content="/">
+  <meta name="twitter:title" content="Home">
   <meta name="twitter:description" content="">
   <meta name="twitter:image" content="">
-
   <link rel="icon" type="image/png" href="/assets/logo.png"/>
-  <link href="http://localhost:4000/feed.xml" type="application/rss+xml" rel="alternate" title="Trineuro" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="/assets/fonts.css">
   <link rel="stylesheet" href="/assets/light.css">
   <link rel="stylesheet" href="/assets/custom.css">
-  <script defer src="/assets/fontawesome-all.min.js"></script>
 </head>
-
 <body>
   <main>
-    <span style="font-style: none; font-size: 13px; float: right; margin: 10px 15px"><a href="/index_ko">한국어</a></span>
     <div class="grid grid-centered">
       <div class="grid-cell">
         <nav class="header-nav">
-          <span style="display:inline-flex;"><img src="/assets/logo.png" alt="logo" style="height:30px; padding:4px"></span>
+          <span style="display:inline-flex;"><img src="/assets/logo.png" alt="logo" style="height:20px"></span>
           <a href="/" class="header-logo" title="Trineuro" style="">Trineuro</a>
           <ul class="header-links">
-            <li><a href="/about/introduction_en.html" style="margin-bottom: 33px;">About</a>
+            <li><a href="/about/introduction.html" style="margin-bottom: 33px;">회사소개  About</a>
               <ul>
-                <li><a href="/about/introduction_en.html">Introduction</a></li>
-                <li><a href="/about/history_en.html">Corporation History</a></li>
-                <li><a href="/about/vision_en.html">Vision / Mission</a></li>
-                <li><a href="/about/researchfocus_en.html">Research Focus</a></li>
-                <li><a href="/about/organization_en.html">Organization</a></li>
-                <li><a href="/about/ci_en.html">CI</a></li>
+                  <li><a href="/about/introduction.html">대표이사인사말<span>Introduction</span></a></li>
+                  <li><a href="/about/history.html">회사연혁<span>Corporation History</span></a></li>
+                  <li><a href="/about/vision.html">비전/미션<span>Vision/Mission</span></a></li>
+                  <li><a href="/about/researchfocus.html">중점연구영역<span>Research Focus</span></a></li>
+                <li><a href="/about/ci.html">CI</a></li>
               </ul>
             </li>
-            <li><a href="/research/fieldsofresearch_en.html" style="margin-bottom:33px;">Research</a>
+            <li><a href="/research/fieldsofresearch.html" style="margin-bottom:33px;">연구개발  Research</a>
               <ul>
-                <li><a href="/research/fieldsofresearch_en.html">Fields of Research</a></li>
-                <li><a href="/research/researchachievements_en.html">Research Achievements</a></li>
-                <li><a href="/research/pipelines_en.html">Pipelines</a></li>
-                <li><a href="/research/paper_en.html">Papers</a></li>
-                <li><a href="/research/patent_en.html">Patents</a></li>
-                <li><a href="/research/rdservice_en.html">R&D Service</a></li>
+                  <li><a href="/research/fieldsofresearch.html">연구분야<span>Fields of Research</span></a></li>
+                  <li><a href="/research/researchachievements.html">연구성과<span>Research Achievements</span></a></li>
+                  <li><a href="/research/pipelines.html">파이프라인<span>Pipelines</span></a></li>
+                  <li><a href="/research/paper.html">논문&특허<span>Paper & Patent</span></a></li>
               </ul>
             </li>
-            <li><a href="/products_en" style="margin-bottom: 33px;">Products</a></li>
-            <li><a href="/news/companynews_en.html" style="margin-bottom: 33px;">News</a></li>
-            <li><a href="/contact_en" style="margin-bottom: 33px;">Contact</a>
+            <li><a href="/rd/1.html" style="margin-bottom: 33px;">R&D 서비스</a>
+              <ul>
+                  <li><a href="/rd/1.html">서비스 신청절차</a></li>
+                  <li><a href="/rd/2.html">보유 뇌질환모델</a></li>
+                  <li><a href="/rd/3.html">in vitro 효능평가 및 기전연구</a></li>
+                  <li><a href="/rd/4.html">in vivo 효능평가 및 기전연구</a></li> 
+              </ul>
+            </li>
+            <li><a href="/news/companynews.html" style="margin-bottom: 33px;">회사소식  News</a>
+              <ul>
+                  <li><a href="/news/companynews.html">회사소식</a></li>
+                  <li><a href="/news/publicrelations.html">홍보<span>Public Relations</span></a></li>
+              </ul>
+            </li>
+            <li><a href="/contact/contact" style="margin-bottom: 33px;">Contact us</a>
+              <ul>
+                  <li><a href="/contact/map.html">찾아오시는 길<span>Map & Direction</span></a></li>
+                  <li><a href="/contact/contact.html">Contact</a></li>
+              </ul>
             </li>
           </ul>
         </nav>
+
         <article class="article ">
           <h1>R&D Service</h1>
           <br/>
