--- a/research/pipelines.html
+++ b/research/pipelines.html
@@ -75,16 +75,9 @@
           <br/>
           <br/>
           <div class="article-content">
-            <p>Trineurotec synthesized about 150 kinds of triple inhibitors to set a chemical library which inhibits DAT, NET and SERT. Based on our chemical library, we make drug pipeline and proceed drug screening. From the pre-clinical experiment, we found that our compounds can also treat depression as well as ADHD.</p>
-            <img style="margin-top: 80px;  margin-right: auto; margin-left: auto; width: 700px; height: auto" align="middle"  src="/assets/pipeline.png" alt="pipeline" />
+            <img style="margin-top: 80px;  margin-right: auto; margin-left: auto; height: auto" align="middle"  src="/assets/pipeline_1.png" alt="pipeline" />
             <br/>
-            <h3>추진계획</h3>
-            <br/>
-            <img style="margin-top: 80px;  margin-right: auto; margin-left: auto; width: 700px; height: auto" align="middle"  src="/assets/추진계획.png" alt="pipeline" />
-            <br/>
-            <h3>현 기술개발 과제의 사업화추진일정</h3>
-            <br/>
-            <img style="margin-top: 80px;  margin-right: auto; margin-left: auto; width: 700px; height: auto" align="middle"  src="/assets/사업화일정.png" alt="pipeline" />
+            <img style="margin-top: 80px;  margin-right: auto; margin-left: auto; height: auto" align="middle"  src="/assets/pipeline_2.png" alt="pipeline" />
           </div>
         </article>
         <footer class="footer ">
