--- a/about/vision.html
+++ b/about/vision.html
@@ -74,7 +74,7 @@
         <article class="article ">
           <h1>Vision / Mission</h1>
           <div class="article-content">
-            <img style="margin-top: 80px;  margin-right: auto; margin-left: auto; width: 700px; height: auto" align="middle"  src="/assets/vision.png" alt="vision" />
+            <img style="margin-top: 80px;  margin-right: auto; margin-left: auto; height: auto" align="middle"  src="/assets/vision.png" alt="vision" />
           </div>
         </article>
         <footer class="footer ">
