--- a/about/introduction.html
+++ b/about/introduction.html
@@ -123,7 +123,7 @@
           <h1>(주)트리뉴로의 사업파트너</h1>
           <br/>
           <br/>
-          <img style="margin-right: auto; margin-left: auto; width: 700px; height: auto;" align="middle"  src="/assets/사업파트너.jpg" alt="사업파트너" />
+          <img style="margin-right: auto; margin-left: auto; height: auto;" align="middle"  src="/assets/사업파트너.jpg" alt="사업파트너" />
         </article>
         <footer class="footer ">
           <p>
