--- a/contact/contact.html
+++ b/contact/contact.html
@@ -2,26 +2,25 @@
 <html lang="en">
 <head>
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Trineurotec | Contact</title>
+  <title>Trineuro | Contact</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="Contact">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="/contact_ko">
+  <meta property="og:url" content="/contact_en">
   <meta property="og:description" content="">
-  <meta property="og:site_name" content="Trineurotec">
+  <meta property="og:site_name" content="Trineuro">
   <meta property="og:image" content="">
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:url" content="/contact_ko">
+  <meta name="twitter:url" content="/contact_en">
   <meta name="twitter:title" content="Contact">
   <meta name="twitter:description" content="">
   <meta name="twitter:image" content="">
 
   <link rel="icon" type="image/png" href="/assets/logo.png"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
 
     <link rel="stylesheet" href="/assets/fonts.css">
 
@@ -36,7 +35,7 @@
 
 <body>
   <main>
-    <span style="font-style: none; font-size: 13px; float: right; margin: 10px 15px"><a href="/">English</a></span>
+    <span style="font-style: none; font-size: 13px; float: right; margin: 10px 15px"><a href="/index_ko">한국어</a></span>
     <div class="grid grid-centered">
       <div class="grid-cell">
         <nav class="header-nav">
@@ -71,43 +70,14 @@
         </nav>
 
         <div class="about " style="margin-top: 30px;">
-  <p><i class="material-icons" style="font-size: 15px;">home</i>&nbsp;&nbsp;서울특별시 광진구 능동로 건국대학교 의생명과학연구원</p>
+  <p><i class="material-icons" style="font-size: 15px;">home</i>&nbsp;&nbsp;120 Neungdong-ro, Gwangjin-gu, Seoul 05029, Korea</p>
   <p><i class="material-icons" style="font-size: 15px;">phone</i>&nbsp;&nbsp;82-2-454-5630</p>
-  <p><i class="material-icons" style="font-size: 13px;">email</i>&nbsp;&nbsp;&nbsp;trineurotec@gmail.com</p>
-  <div id="map" style="width:100%;height:400px;margin-top:70px;"></div>
+  <p><i class="material-icons" style="font-size: 13px;">email</i>&nbsp;&nbsp;&nbsp;trineurotec@trineurotec.com</p>
 </div>
 
-<script>
-function myMap() {
-
-  var myLatlng = new google.maps.LatLng(37.541443, 127.072230);
-  var mapProp= {
-  // How zoomed in you want the map to start at (always required)
-  zoom: 16,
-
-  center: myLatlng,
-
-  // How you would like to style the map.
-  scrollwheel: false,
-  styles: [{"featureType":"administrative.land_parcel","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"landscape.man_made","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"poi","elementType":"labels","stylers":[{"visibility":"off"}]},{"featureType":"road","elementType":"labels","stylers":[{"visibility":"simplified"},{"lightness":20}]},{"featureType":"road.highway","elementType":"geometry","stylers":[{"hue":"#f49935"}]},{"featureType":"road.highway","elementType":"labels","stylers":[{"visibility":"simplified"}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"hue":"#fad959"}]},{"featureType":"road.arterial","elementType":"labels","stylers":[{"visibility":"off"}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"visibility":"simplified"}]},{"featureType":"road.local","elementType":"labels","stylers":[{"visibility":"simplified"}]},{"featureType":"transit","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"all","stylers":[{"hue":"#a1cdfc"},{"saturation":30},{"lightness":49}]}]
-
-  };
-  var map=new google.maps.Map(document.getElementById("map"),mapProp);
-
-  var marker = new google.maps.Marker({
-      position: myLatlng,
-  });
-
-  // To add the marker to the map, call setMap();
-  marker.setMap(map);
-  }
-</script>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBB-MMbIRSZKMsCnMIEqzf_xaZj6TVO1-I&callback=myMap"></script>
-
-        <footer class="footer ">
+<footer class="footer ">
   <p>
-    Trineurotec.
+    Trineuro.
   </p>
 </footer>
 
