--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
 <body>
   <main class="notfound-wrapper">
     <div class="notfound-content">
-      <h1><a href="/" title="Back to homepage">Trineurotec</a></h1>
+      <h1><a href="/" title="Back to homepage">Trineuro</a></h1>
       <p>
         Looks like you got lost. Let's get you back to the <a href="/">homepage</a>!
       </p>
