--- a/research/paper.html
+++ b/research/paper.html
@@ -442,5 +442,6 @@
         }
   </script>
   <script src="/assets/vendor.js"></script>
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
 </body>
 </html>
