--- a/research/paper.html
+++ b/research/paper.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="/assets/fonts.css">
   <link rel="stylesheet" href="/assets/light.css">
   <link rel="stylesheet" href="/assets/custom.css">
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 </head>
 <body>
   <main>
@@ -400,7 +401,6 @@
       </div>
     </div>
   </main>
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script>
       $.ajax({
         url: 'csv_data.csv',
