--- a/research/paper.html
+++ b/research/paper.html
@@ -70,7 +70,9 @@
             </li>
           </ul>
         </nav>
+        <div id="article" />
 
+        <!--
         <ul class="article-list">
           <li class="article-list-item ">
             <a href="/posts/highsucrose" title="High sucrose consumption during pregnancy induced ADHD-like behavioral phenotypes in mice offspring.">
@@ -393,6 +395,7 @@
             </div>
           </li>
         </ul>
+        -->
         <footer class="footer ">
           <p>
             Trineuro.
@@ -439,7 +442,7 @@
           }
           table += '</tbody>';
           table += '</table>';
-          $('body').append(table);
+          $('#article').append(table);
         }
   </script>
   <script src="/assets/vendor.js"></script>
