--- a/research/paper.html
+++ b/research/paper.html
@@ -412,37 +412,18 @@
 
       function successFunction(data) {
           var allRows = data.split(/\r?\n|\r/);
-          var table = '<table>';
           for (var singleRow = 0; singleRow < allRows.length; singleRow++) {
-            if (singleRow === 0) {
-              table += '<thead>';
-              table += '<tr>';
-            } else {
-              table += '<tr>';
-            }
             var rowCells = allRows[singleRow].split(',');
-            for (var rowCell = 0; rowCell < rowCells.length; rowCell++) {
-              if (singleRow === 0) {
-                table += '<th>';
-                table += rowCells[rowCell];
-                table += '</th>';
-              } else {
-                table += '<td>';
-                table += rowCells[rowCell];
-                table += '</td>';
-              }
-            }
-            if (singleRow === 0) {
-              table += '</tr>';
-              table += '</thead>';
-              table += '<tbody>';
-            } else {
-              table += '</tr>';
-            }
-          }
-          table += '</tbody>';
-          table += '</table>';
-          $('#article').append(table);
+            var post = '<li class="article-list-item">';
+            post += '<a href="asdf" title="asdf">';
+            post += '<h5>';
+            post += rowCells[0];
+            post += '</h5></a>';
+            post += '<p style="font-size: 12px;">';
+            post += rowCells[1];
+            post += '</p>';
+            post += '<div class="article-list-footer"></div>';
+            $('#article').append(post);
         }
   </script>
   <script src="/assets/vendor.js"></script>
