--- a/research/paper.html
+++ b/research/paper.html
@@ -70,7 +70,7 @@
             </li>
           </ul>
         </nav>
-        <ul id="article-list">
+        <ul class="article-list">
         </ul>
 
         <!--
