--- a/research/paper.html
+++ b/research/paper.html
@@ -414,7 +414,7 @@
       function successFunction(data) {
           var allRows = data.split(/\r?\n|\r/);
           for (var singleRow = 0; singleRow < allRows.length; singleRow++) {
-            var rowCells = allRows[singleRow].split(',');
+            var rowCells = allRows[singleRow].split('|');
             var post = '<li class="article-list-item">';
             post += '<a href="asdf" title="asdf">';
             post += '<h5>';
