--- a/research/paper.html
+++ b/research/paper.html
@@ -70,8 +70,13 @@
             </li>
           </ul>
         </nav>
-        <ul class="article-list">
-        </ul>
+
+        <article class="article">
+            <h1>Papers</h1>
+            <ul class="article-list">
+            </ul>
+            <h1>Patents</h1>
+        </article>
 
         <!--
         <ul class="article-list">
